--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,9 @@
     "nodemon": "^2.0.6"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "body-parser": "^1.19.0",
+    "cheerio": "^1.0.0-rc.12",
     "concurrently": "^5.3.0",
     "express": "^4.17.1"
   }
